<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather"
    android:layout_width="match_parent"
    android:layout_height="650dp"
    android:background="@drawable/sunny"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgViewWeatherCode"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/sun" />

    <TextView
        android:id="@+id/txtViewWeather"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="105dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtViewTemperature"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="291dp"
        android:layout_marginEnd="195dp"
        android:text="@string/temperature"
        android:textColor="@color/black"
        android:textSize="15dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtViewTemperatureValue"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="226dp"
        android:layout_marginTop="287dp"
        android:layout_marginEnd="1dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="15dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtViewElevation"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="214dp"
        android:text="@string/elevation"
        android:textColor="@color/black"
        android:textSize="15dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/txtViewWindspeedValue"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="208dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="267dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="15dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtViewWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="207dp"
        android:layout_marginBottom="269dp"
        android:text="@string/windspeed"
        android:textColor="@color/black"
        android:textSize="15dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtViewWindDirection"
        android:layout_width="202dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="210dp"
        android:text="@string/winddirection"
        android:textColor="@color/black"
        android:textSize="15dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtViewWindDirectionValue"
        android:layout_width="202dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="210dp"
        android:layout_marginTop="382dp"
        android:layout_marginEnd="-1dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="15dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtViewElevationValue"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="226dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="-1dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="15dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="591dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/close"
        tools:ignore="MissingConstraints" />


</RelativeLayout>